# Falco

./: README.md  requirements.txt  setup.cfg
docs/: CNAME  README.md
etc/: README.md
etc/falco/: falco.yaml  falco_rules.local.yaml
etc/prometheus/: prometheus.yaml
falcotutor/: ui.py
scripts/: event_aggregator.py  falco_diagram.py  show_falco_rules.py
test/data/: falco_json_lines.txt
tutorial/: README.md  TUTORIAL.md
