[metadata]
author = Jose Vicente Nunez
author_email = kodegeek.com@protonmail.com
name = FalcoPrometheusGrafana
version = 0.0.1
description = Tutorial - Securing mixed clouds using Falco, Prometheus, Grafana and Docker
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/josevnz/FalcoPrometheusGrafana

[options]
zip_safe = False
packages = find:
include_package_data = True
setup_requires =
    build
    setuptools
    twine
install_requires =
    importlib; python_version == "3.9"
    diagrams
    rich
    graphviz
    textual
    PyYAML
scripts =
    scripts/show_falco_rules.py
    scripts/event_aggregator.py
    scripts/falco_diagram.py
[options.package_data]
falcotutor = *.png